VIM Rendering Updgrade P2S1

--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <title>Technology Asset Dashboard</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://unpkg.com/konva@9.3.6/konva.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     
     <link rel="stylesheet" href="CSS/style.css">
     <!-- Updated stylesheet link with cache-busting query -->
-    <link rel="stylesheet" href="CSS/visual_inventory_styles.css?v=1.2">
+    <link rel="stylesheet" href="CSS/visual_inventory_styles.css?v=1.3">
 </head>
 <body class="bg-gray-100 text-gray-800">
 
@@ -262,6 +263,7 @@
                         </div>
 
                         <div id="grid-container" class="lg:col-span-3 bg-gray-100 border rounded-lg p-2">
+                             <!-- This div will now be the target for the Konva.js canvas -->
                              <div id="room-grid"></div>
                         </div>
                     </div>
