UI Fix for missing button

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                     <div class="bg-white p-6 rounded-lg shadow-md">
                         <div class="flex justify-between items-center mb-4">
                             <h3 class="text-lg font-semibold flex-grow">Assets by Site</h3>
-                            <select id="site-chart-type" class="form-select text-sm py-1">
+                            <select id="site-chart-type" class="form-select chart-type-select text-sm py-1 w-32">
                                 <option value="pie">Pie</option>
                                 <option value="bar">Bar</option>
                                 <option value="doughnut">Doughnut</option>
@@ -160,7 +160,7 @@
                     <div class="bg-white p-6 rounded-lg shadow-md">
                         <div class="flex justify-between items-center mb-4">
                             <h3 class="text-lg font-semibold flex-grow">Assets by Condition</h3>
-                            <select id="condition-chart-type" class="form-select text-sm py-1">
+                            <select id="condition-chart-type" class="form-select chart-type-select text-sm py-1 w-32">
                                 <option value="bar">Bar</option>
                                 <option value="pie">Pie</option>
                                 <option value="doughnut">Doughnut</option>
@@ -171,7 +171,7 @@
                     <div class="bg-white p-6 rounded-lg shadow-md">
                         <div class="flex justify-between items-center mb-4">
                             <h3 class="text-lg font-semibold flex-grow">Assets by Type</h3>
-                             <select id="type-chart-type" class="form-select text-sm py-1">
+                             <select id="type-chart-type" class="form-select chart-type-select text-sm py-1 w-32">
                                 <option value="bar">Bar</option>
                                 <option value="pie">Pie</option>
                                 <option value="doughnut">Doughnut</option>
@@ -182,7 +182,7 @@
                     <div class="bg-white p-6 rounded-lg shadow-md">
                          <div class="flex justify-between items-center mb-4">
                             <h3 class="text-lg font-semibold flex-grow">Assets by Employee</h3>
-                             <select id="employee-chart-type" class="form-select text-sm py-1">
+                             <select id="employee-chart-type" class="form-select chart-type-select text-sm py-1 w-32">
                                 <option value="bar">Bar</option>
                                 <option value="pie">Pie</option>
                                 <option value="doughnut">Doughnut</option>
@@ -638,4 +638,3 @@
     <script type="module" src="JS/main.js?v=1.1"></script>
 </body>
 </html>
-
