--- a/index.html
+++ b/index.html
@@ -149,13 +149,51 @@
             </div>
 
             <div id="overview-panel" class="hidden">
+                <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 mb-6">
+                    <div class="bg-white p-6 rounded-lg shadow-md flex items-center">
+                        <div class="bg-blue-100 text-blue-600 rounded-full p-3 mr-4">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10" /></svg>
+                        </div>
+                        <div>
+                            <h4 class="text-gray-500 text-sm font-medium">Total Assets</h4>
+                            <p id="total-assets-stat" class="text-3xl font-bold text-gray-900">0</p>
+                        </div>
+                    </div>
+                    <div class="bg-white p-6 rounded-lg shadow-md flex items-center">
+                        <div class="bg-green-100 text-green-600 rounded-full p-3 mr-4">
+                             <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" /></svg>
+                        </div>
+                        <div>
+                            <h4 class="text-gray-500 text-sm font-medium">Assigned Assets</h4>
+                            <p id="assigned-assets-stat" class="text-3xl font-bold text-gray-900">0</p>
+                        </div>
+                    </div>
+                    <div class="bg-white p-6 rounded-lg shadow-md flex items-center">
+                        <div class="bg-purple-100 text-purple-600 rounded-full p-3 mr-4">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 21V5a2 2 0 00-2-2H7a2 2 0 00-2 2v16m14 0h2m-2 0h-5m-9 0H3m2 0h5M9 7h1m-1 4h1m4-4h1m-1 4h1m-5 10v-5a1 1 0 011-1h2a1 1 0 011 1v5m-4 0h4" /></svg>
+                        </div>
+                        <div>
+                            <h4 class="text-gray-500 text-sm font-medium">Total Sites</h4>
+                            <p id="total-sites-stat" class="text-3xl font-bold text-gray-900">0</p>
+                        </div>
+                    </div>
+                     <div class="bg-white p-6 rounded-lg shadow-md flex items-center">
+                        <div class="bg-yellow-100 text-yellow-600 rounded-full p-3 mr-4">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
+                        </div>
+                        <div>
+                            <h4 class="text-gray-500 text-sm font-medium">Assets in Good Condition</h4>
+                            <p id="good-condition-stat" class="text-3xl font-bold text-gray-900">0</p>
+                        </div>
+                    </div>
+                </div>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                     <div class="bg-white p-6 rounded-lg shadow-md">
                         <div class="flex justify-between items-center mb-4">
                             <h3 class="text-lg font-semibold flex-grow">Assets by Site</h3>
                             <select id="site-chart-type" class="form-select chart-type-select text-sm py-1 w-32">
-                                <option value="pie">Pie</option>
                                 <option value="bar">Bar</option>
+                                <option value="pie">Pie</option>
                                 <option value="doughnut">Doughnut</option>
                             </select>
                         </div>
@@ -418,7 +456,7 @@
                      <div>
                         <label for="condition" class="form-label">Condition</label>
                         <select id="condition" class="form-select">
-                            <option>New</option> <option>Good</option> <option>Fair</option> <option>Damaged</option> <option>For Repair</option>
+                            <option>New</option> <option>Good</option> <option>Fair</option> <option>Damaged</option> <option>For Repair</option> <option>Missing</option>
                         </select>
                     </div>
                     <div>
@@ -514,7 +552,7 @@
                         <div class="flex-grow">
                             <label for="bulk-condition" class="form-label">Condition</label>
                             <select id="bulk-condition" class="form-select disabled:bg-gray-100" disabled>
-                                <option>New</option><option>Good</option><option>Fair</option><option>Damaged</option><option>For Repair</option>
+                                <option>New</option><option>Good</option><option>Fair</option><option>Damaged</option><option>For Repair</option><option>Missing</option>
                             </select>
                         </div>
                     </div>
